--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
-    "types": ["node", "jest"]
-  },
-  "include": ["src/**/*", "test/**/*"],
-  "exclude": ["node_modules"]
+    "noFallthroughCasesInSwitch": false
+  }
 }
